[tool.poetry]
name = "simple_test"
version = "0.1.0a1"
description = "A simple test runner"
authors = ["Philip Olson <philip.olson@pm.me>"]
readme = "README.md"
repository = "https://github.com/olsonpm/py_simple-test"
include = ["license.txt"]

[tool.poetry.scripts]
simple-test = "simple_test.script"

[tool.poetry.dependencies]
python = "^3.7"
wrapt = "^1.10"
ordered_set = "^3.1"
simple_test_default_reporter = {path = "../py_simple-test-default-reporter"}
simple_test_process = {path = "../py_simple-test-process"}

[tool.poetry.dev-dependencies]
case_conversion = "^2.1"
num2words = "^0.5.8"
simple_chalk = "^0.1.0"
pretty_simple_namespace = {path = "../py_pretty-simple-namespace"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
